# ComfyUI-YoloWorld-EfficientSAM

./: .gitignore  README.md  YOLO_WORLD_EfficientSAM.py  YOLO_WORLD_SEGS.py  __init__.py  alternative_test_suite.py  pyproject.toml  requirements.txt  test_suite.py
YOLO_World_EfficientSAM_WORKFLOWS/: YoloWorld-EfficientSAM V1.0 IMG 【Zho】.json  YoloWorld-EfficientSAM V1.0 VIDEO 【Zho】.json  YoloWorld-EfficientSAM V2.0 IMG 【Zho】.json  YoloWorld-EfficientSAM V2.0 VIDEO 【Zho】.json
utils/: efficient_sam.py  video.py
